--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -1,16 +1,35 @@
-name: Deploy to Linode
+name: Build Docker Image -- Push to Dockerhub -- Deploy to Server
 
 on:
-  workflow_run:
-    workflows: ["Build and Push Docker Image"] # Replace with the name of your first workflow
-    types:
-      - completed
-  workflow_dispatch:
+  push:
+    branches: [ "master" ]
 
 jobs:
-  deploy:
+
+  build:
+
     runs-on: ubuntu-latest
 
+    steps:
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/dancexam-server:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Install SSH client
         run: sudo apt-get install -y ssh
@@ -33,3 +52,4 @@ jobs:
             ENV_FILE=.env_demo DOCKER_PORT_MAPPING=7002 SERVER_PORT=8000 PG_ADMIN_DOCKER_PORT_MAPPING=7003 docker compose -p dancexam-demo up -d
           EOF
         continue-on-error: false
+
